@@ -1,6 +1,7 @@
 ??/??/2015 autofs-5.1.2
 =======================
 - update libtirpc workaround for new soname.
+- revert fix libtirpc name clash.
 
 21/04/2015 autofs-5.1.1
 =======================
